Added description of print statements

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94\n"
+      "Most frequent duration is 94 min\n"
      ]
     }
    ],
@@ -86,14 +86,22 @@
     "# Save the result in the original dataframe\n",
     "duration = most_frequent_duration\n",
     "\n",
-    "print(duration)"
+    "print('Most frequent duration is',duration,'min')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of short movies: 7\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter data for short action movies released in the 1990s\n",
     "short_action_movies_1990s = netflix_df[\n",
@@ -105,7 +113,9 @@
     "].copy()\n",
     "\n",
     "# Count the number of short action movies\n",
-    "short_movie_count = len(short_action_movies_1990s)"
+    "short_movie_count = len(short_action_movies_1990s)\n",
+    "\n",
+    "print('Amount of short movies:',short_movie_count)"
    ]
   },
   {
